# fuzzyevolve

./: .gitignore  AGENTS.md  README.md  best.md  config.toml  pyproject.toml
.github/workflows/: publish.yml
fuzzyevolve/: cli.py  config.py  datamodels.py  main.py  reporting.py  run_store.py
fuzzyevolve/adapters/: __init__.py
fuzzyevolve/adapters/llm/: __init__.py  critic.py  ensemble.py  mutator.py  operators.py  prompts.py  ranker.py
fuzzyevolve/console/: mutation_viewer.py
fuzzyevolve/core/: anchors.py  archive.py  battle.py  critique.py  descriptor_system.py  descriptors.py  descriptors_semantic.py  embeddings.py  engine.py  inspirations.py  judge.py  models.py  multiobjective.py  mutation.py  pool.py  ports.py  ratings.py  reference_pool.py  scoring.py  selection.py  stats.py
fuzzyevolve/evolution/: archive.py  driver.py  judge.py  scoring.py
fuzzyevolve/llm/: client.py  models.py  parsers.py  parsing.py  prompts.py
fuzzyevolve/mutation/: diff.py  mutator.py  patcher.py
fuzzyevolve/tui/: __init__.py  app.py  run_data.py
fuzzyevolve/utils/: diff.py  logging.py  logging_setup.py  mutation_viewer.py
tests/: __init__.py  conftest.py  test_anchors.py  test_archive.py  test_cli_config.py  test_cli_default_command.py  test_config.py  test_diff.py  test_driver.py  test_judge.py  test_multiobjective.py  test_mutation.py  test_opponent_far_but_close.py  test_parsers.py  test_patcher.py  test_pool.py  test_prompts.py  test_ranker.py  test_ratings.py  test_reference_pool.py  test_reporting.py  test_run_store.py  test_selection.py
