[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzyevolve"
version = "0.1.0"
description = "AlphaEvolve with fuzzy evaluation. Evolve anything not just code." # Updated description
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name="Your Name / Team", email="your@email.com" }, # Please update
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
]
dependencies = [
    "google-genai>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.49",
    "numpy>=2.2.6",
    "rich>=13.9.4",
    "trueskill>=0.4.5",
    "typer>=0.12.3",
    "tomli>=2.0.1; python_version < '3.11'",
]

# CLI command entry point
[project.scripts]
fuzzyevolve = "fuzzyevolve.cli:app"

# Optional project URLs
[project.urls]
"Homepage" = "https://github.com/caesarnine/fuzzyevolve"
"Bug Tracker" = "https://github.com/caesarnine/fuzzyevolve/issues"

# Optional dependencies (formerly dependency-groups)
[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",   # Interactive kernel
    "pre-commit>=3.7.1",  # Git hooks manager
    "pytest>=7.0.0",      # Testing framework
    "mypy>=1.0.0",        # Static type checker
    "ruff>=0.1.0",        # Linter and formatter
    "build>=1.2.1",       # For building the package
    "twine>=5.0.0",       # For uploading to PyPI (optional)
]
# Optional: Extra for Vertex AI support
vertex = ["google-cloud-aiplatform>=1.48.0"]
semantic = ["sentence-transformers>=2.6.1"]


[tool.ruff]
# Exclude the same directories from all checks & fixes.
extend-exclude = [
    "migrations",
    ".venv",        # Exclude virtual env
    ".git",         # Exclude git dir
    ".ctxl",        # Exclude runtime data dir
    "dist",         # Exclude build artifacts
    "build",        # Exclude build artifacts
    "*.egg-info",   # Exclude build artifacts
    ]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10+ based on requires-python = ">=3.10"
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (F) and pycodestyle (E, W) error rules by default.
# Enable flake8-import-conventions (I).
# Enable pyupgrade rules (UP).
# Add others as needed (e.g., B for flake8-bugbear, SIM for flake8-simplify)
ignore = ["E501"] # REMOVED E722 (bare except) - Prefer 'except Exception:' or specific types.
unfixable = ["F401"] # Prevent auto-removal of unused imports

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["fuzzyevolve*"]
